# hi3861_learn_ing

./: README.md
src/: ohos_config.json
src/applications/sample/wifi-iot/app/: BUILD.gn
src/applications/sample/wifi-iot/app/B1_basic_led_blink/: BUILD.gn
src/applications/sample/wifi-iot/app/B3_basic_pwm_led/: pwm_example.c
src/applications/sample/wifi-iot/app/Baal/: BUILD.gn  README.md  iot_cloud_oc_sample.c
src/applications/sample/wifi-iot/app/D11_iot_cloud_oc_agriculture/: iot_cloud_oc_sample.c
src/applications/sample/wifi-iot/app/D11_iot_cloud_oc_agriculture/include/: E53_IA1.h
src/applications/sample/wifi-iot/app/D2_iot_wifi_sta_connect/: wifi_sta_connect.c
src/applications/sample/wifi-iot/app/D8_iot_cloud_oc_light/: infrared_example.c
src/applications/sample/wifi-iot/app/demo_infrared/: BUILD.gn  README.md  infrared_example.c
src/applications/sample/wifi-iot/app/demo_servo/: README.md  servo_example.c
src/applications/sample/wifi-iot/app/demo_servo/include/: SG90_servo.h
src/applications/sample/wifi-iot/app/demo_servo/src/: SG90_servo.c
src/applications/sample/wifi-iot/app/iothardware/: BUILD.gn  led_example.c
src/applications/sample/wifi-iot/app/my_first_app/: BUILD.gn  message_example.c
src/applications/sample/wifi-iot/app/sg90_demo/Project_One_For_SG90R_Slave/: BUILD.gn  main.c
src/applications/sample/wifi-iot/app/sg90_demo/Project_One_For_SG90R_Slave/include/: iot_config.h  my_iot_gpio.h  sg92r_control.h
src/applications/sample/wifi-iot/app/sg90_demo/Project_One_For_SG90R_Slave/src/: hal_iot_gpio_ex.c  iot_main.c  iot_profile.c  my_iot_gpio.c  sg92r_control.c  wifi_connecter.c
src/applications/sample/wifi-iot/app/svero/: BUILD.gn  main.c
src/applications/sample/wifi-iot/app/svero/include/: MPU9250.h  MPU92502.h  MPU9250_4.h
src/applications/sample/wifi-iot/app/svero/src/: MPU9250_1 copy.c  MPU9250_1.c  MPU9250_2.c  MPU9250_3.c  MPU9250_4.c  MPU9250_4_copy.c  MPU9250_5.c
src/device/hisilicon/hispark_pegasus/sdk_liteos/: .sconsign.dblite
