# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [ 
        #"B1_basic_led_blink:led_example", 
        "startup",
        #"D2_iot_wifi_sta_connect:wifi_sta_connect",
        #"D11_iot_cloud_oc_agriculture:cloud_oc_agriculture"
        #"A1_kernal_thread:thread_example",
        #"demo_infrared:infrared_example",
        "demo_infrared:example_demolink",
        
    ]
}
