import("//build/lite/config/component/lite_component.gni")
static_library("Servo_Task") {
    sources = [
        "src/sg92r_control.c",
        "src/my_iot_gpio.c",
        "src/cjson_init.c",
        "src/iot_profile.c",
        "src/wifi_connecter.c",
        "src/iot_main.c",
        "src/hal_iot_gpio_ex.c",
        "main.c",
    ]
    
    include_dirs = [
    "./",
    "//utils/native/lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//device/soc/hisilicon/hi3861v100/sdk_liteos/third_party/lwip_sack/include/lwip",
    "//third_party/cJSON",
    "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/mbedtls/include/mbedtls",
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/paho.mqtt.c/include/mqtt",
    "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/libcoap/include/coap2",
  ]

}
